--- a/index.html
+++ b/index.html
@@ -10,25 +10,29 @@
     <header>
         <h1>Weather Dashboard</h1>
     </header>
-    <section id="search-section">
-        <input type="text" id="city-input" placeholder="Search for a City:" />
-        <button id="search-button">Search</button>
-        <div id="search-history"></div>
-    </section>
-    <!-- Dynamically fill these in using Javascript -->
-    <section id="current-weather">
-        <h2 id="city-name"></h2>
-        <p id="temperature"></p>
-        <p id="wind"></p>
-        <p id="humidity"></p>
-    </section>
-    <section id="forecast">
-        <h3>5-Day Forecast:</h3>
-        <div id="forecast-container">
-            <!-- Use Javascript to insert weather cards -->
-        </div>
-    </section>
-    <script src="./assets/script.js"></script>
+    <div class="main-container">
+        <section id="search-section">
+            <input type="text" id="city-input" placeholder="Search for a City:" />
+            <button id="search-button">Search</button>
+            <div id="search-history"></div>
+        </section>
     
+    <!-- Dynamically fill these in using Javascript -->
+        <section id="weather-container">
+            <section id="current-weather">
+                <h2 id="city-name"></h2>
+                <p id="temperature"></p>
+                <p id="wind"></p>
+                <p id="humidity"></p>
+            </section>
+            <section id="forecast">
+                <h3>5-Day Forecast:</h3>
+                <div id="forecast-container">
+                    <!-- Use Javascript to insert weather cards -->
+                </div>
+            </section>
+        </section>
+        <script src="./assets/script.js"></script>
+    </div>
 </body>
 </html>
